--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -727,6 +727,13 @@
               }
           };
 
+          function cancelNotification(id_notification)
+          {
+                cordova.plugins.notification.local.cancel(id_notification, function() {
+                    alert("done");
+                });
+          }
+
           var notification_on_1 = localStorage.getItem('notification-on-1');
           var notification_on_2 = localStorage.getItem('notification-on-2');
           var notification_on_3 = localStorage.getItem('notification-on-3');
@@ -832,6 +839,8 @@
 
               $("#notification-on-1").hide();
               $("#notification-off-1").show();
+
+              cancelNotification(1);
           });
 
           $("#notification-on-2").click(function()
@@ -866,7 +875,7 @@
               $("#notification-off-5").show();
           });
 
-          var testWaktu = "10:50 am";
+          var testWaktu = "6:20 pm";
 
           function setDateTime(date, time) {
               var index = time.indexOf(":"); // replace with ":" for differently displayed time.
