--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -687,7 +687,19 @@
             });
           };
 
-          function addNotificationSubuh()
+          function addNotificationWithSound(notification_id, date)
+          {
+              cordova.plugins.notification.local.schedule({
+                  id:notification_id,
+                  text: "Cobain tambah " + date,
+                  firstAt: date,
+                  led: "FF0000",
+                  icon: "file://icon.png",
+                  sound: "file://mecca_56_22.mp3"
+            });
+          };
+
+          function addNotificationSubuh(sound)
           {
 
               var waktu = new Date();
@@ -697,14 +709,21 @@
               if(waktu.getTime() > now.getTime())
               {
                   alert(waktu);
-                  addNotification(1, waktu);
+
+                  if(!sound)
+                    addNotification(1, waktu);
+                  else
+                    addNotificationWithSound(1, waktu);
               }
               else
               {
                   var waktu = new Date();
                   var waktu = setDateTimeTommorow(waktu, testWaktu);
                   alert(waktu);
-                  addNotification(1, waktu);
+                  if(!sound)
+                    addNotification(1, waktu);
+                  else
+                    addNotificationWithSound(1, waktu);
               }
           };
 
@@ -740,12 +759,14 @@
                           alert(waktu);
                           updateNotificationSound(1, waktu);
                       }
+
+                      switchVolumeOn(1);
                   }
                   else
                   {
-                      addNotificationSubuh();
+                      addNotificationSubuh(true);
 
-                      switchVolumeOn(id);
+                      switchVolumeOn(1);
                   }
             });
           }
@@ -821,7 +842,7 @@
               $("#notification-off-1").hide();
               $("#notification-on-1").show();
 
-              addNotificationSubuh();
+              addNotificationSubuh(false);
           });
 
           $("#notification-off-2").click(function()
@@ -899,7 +920,7 @@
               $("#notification-off-5").show();
           });
 
-          var testWaktu = "6:55 pm";
+          var testWaktu = "7:05 pm";
 
           function setDateTime(date, time) {
               var index = time.indexOf(":"); // replace with ":" for differently displayed time.
