--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -675,6 +675,24 @@
               $("#volume-on-" + id).show();
           }
 
+          function switchNotificationOff(id)
+          {
+              var string = 'notification-on-' + id;
+              localStorage.setItem(string, 'off');
+
+              $("#notification-on-" + id).hide();
+              $("#notification-off-" + id).show();
+          }
+
+          function switchNotificationOn(id)
+          {
+              var string = 'notification-on-' + id;
+              localStorage.setItem(string, 'on');
+
+              $("#notification-off-" + id).hide();
+              $("#notification-on-" + id).show();
+          }
+
           function addNotification(notification_id, date)
           {
               cordova.plugins.notification.local.schedule({
@@ -766,6 +784,7 @@
                   {
                       addNotificationSubuh(true);
 
+                      switchNotificationOn(1);
                       switchVolumeOn(1);
                   }
             });
@@ -920,7 +939,7 @@
               $("#notification-off-5").show();
           });
 
-          var testWaktu = "7:05 pm";
+          var testWaktu = "7:15 pm";
 
           function setDateTime(date, time) {
               var index = time.indexOf(":"); // replace with ":" for differently displayed time.
