--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -756,6 +756,17 @@
                 });
           };
 
+          function updateNotificationSoundOff(notification_id, date)
+          {
+                cordova.plugins.notification.local.update({
+                    id:notification_id,
+                    text: "update off ",
+                    led: "FF0000",
+                    icon: "file://icon.png",
+                    sound: null
+                });
+          };
+
           function updateNotificationSoundSubuh()
           {
               cordova.plugins.notification.local.isPresent(1, function (present) {
@@ -786,6 +797,37 @@
 
                       switchNotificationOn(1);
                       switchVolumeOn(1);
+                  }
+            });
+          }
+
+          function removeUpdateNotificationSoundSubuh()
+          {
+              cordova.plugins.notification.local.isPresent(1, function (present) {
+                  if(present)
+                  {
+                      var waktu = new Date();
+                      var waktu = setDateTime(waktu, testWaktu);
+
+                      var now = new Date();
+                      if(waktu.getTime() > now.getTime())
+                      {
+                          alert(waktu);
+                          updateNotificationSoundOff(1, waktu);
+                      }
+                      else
+                      {
+                          var waktu = new Date();
+                          var waktu = setDateTimeTommorow(waktu, testWaktu);
+                          alert(waktu);
+                          updateNotificationSoundOff(1, waktu);
+                      }
+
+                      switchVolumeOff(1);
+                  }
+                  else
+                  {
+                      switchVolumeOff(1);
                   }
             });
           }
@@ -939,7 +981,7 @@
               $("#notification-off-5").show();
           });
 
-          var testWaktu = "7:15 pm";
+          var testWaktu = "7:30 pm";
 
           function setDateTime(date, time) {
               var index = time.indexOf(":"); // replace with ":" for differently displayed time.
