--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -619,10 +619,7 @@
 
           $("#volume-on-1").click(function()
           {
-              localStorage.setItem('volume-on-1', 'off');
-
-              $("#volume-on-1").hide();
-              $("#volume-off-1").show();
+              removeUpdateNotificationSoundSubuh();
           });
 
           $("#volume-on-2").click(function()
@@ -981,7 +978,7 @@
               $("#notification-off-5").show();
           });
 
-          var testWaktu = "7:47 pm";
+          var testWaktu = "7:54 pm";
 
           function setDateTime(date, time) {
               var index = time.indexOf(":"); // replace with ":" for differently displayed time.
