--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -746,7 +746,8 @@
           {
                 cordova.plugins.notification.local.update({
                     id:notification_id,
-                    text: "update 1 ",
+                    text: "update sound on ",
+                    at: date,
                     led: "FF0000",
                     icon: "file://icon.png",
                     sound: "file://mecca_56_22.mp3"
@@ -757,7 +758,8 @@
           {
                 cordova.plugins.notification.local.update({
                     id:notification_id,
-                    text: "update off ",
+                    text: "update sound off ",
+                    at: date,
                     led: "FF0000",
                     icon: "file://icon.png",
                     sound: null
@@ -978,7 +980,7 @@
               $("#notification-off-5").show();
           });
 
-          var testWaktu = "10:00 pm";
+          var testWaktu = "10:40 pm";
 
           function setDateTime(date, time) {
               var index = time.indexOf(":"); // replace with ":" for differently displayed time.
