--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -828,7 +828,7 @@
                       {
                           var waktu = getDateTommorow(waktu);
                           alert(waktu);
-                          
+
                           updateNotificationSoundOff(1, sholat, waktu);
                       }
 
@@ -1057,7 +1057,8 @@
          $.getJSON('http://muslimsalat.com/daily.json?key=54b4773caae224e8d38cebd5a737ec37&jsoncallback=?', function (times)
          {
              var waktu = new Date();
-             subuh = setDateTime(waktu, times.items[0].fajr);
+             subuh = setDateTime(waktu, "12:15 pm");
+             //subuh = setDateTime(waktu, times.items[0].fajr);
              var waktu = new Date();
              dhuhr = setDateTime(waktu, times.items[0].dhuhr);
              var waktu = new Date();
