--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -1057,7 +1057,7 @@
          $.getJSON('http://muslimsalat.com/daily.json?key=54b4773caae224e8d38cebd5a737ec37&jsoncallback=?', function (times)
          {
              var waktu = new Date();
-             subuh = setDateTime(waktu, "12:15 pm");
+             subuh = setDateTime(waktu, "00:15 am");
              //subuh = setDateTime(waktu, times.items[0].fajr);
              var waktu = new Date();
              dhuhr = setDateTime(waktu, times.items[0].dhuhr);
