--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -782,24 +782,24 @@
                       if(waktu.getTime() > now.getTime())
                       {
                           alert(waktu);
-                          updateNotificationSound(notification_id, sholat, waktu);
+                          updateNotificationSound(1, sholat, waktu);
                       }
                       else
                       {
                           var waktu = getDateTommorow(waktu);
                           alert(waktu);
 
-                          updateNotificationSound(notification_id, sholat, waktu);
+                          updateNotificationSound(1, sholat, waktu);
                       }
 
-                      switchVolumeOn(notification_id);
+                      switchVolumeOn(1);
                   }
                   else
                   {
-                      addNotificationSholat(notification_id, sholat, waktu, true);
+                      addNotificationSholat(1, sholat, waktu, true);
 
-                      switchNotificationOn(notification_id);
-                      switchVolumeOn(notification_id);
+                      switchNotificationOn(1);
+                      switchVolumeOn(1);
                   }
             });
           }
@@ -1048,7 +1048,7 @@
          $.getJSON('http://muslimsalat.com/daily.json?key=54b4773caae224e8d38cebd5a737ec37&jsoncallback=?', function (times)
          {
              var waktu = new Date();
-             subuh = setDateTime(waktu, "4:30 am");
+             subuh = setDateTime(waktu, "4:36 am");
              //subuh = setDateTime(waktu, times.items[0].fajr);
              var waktu = new Date();
              dhuhr = setDateTime(waktu, times.items[0].dhuhr);
