update notification sholat alert

--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -775,12 +775,14 @@
 
           function updateNotificationSoundSholat(notification_id, sholat, waktu)
           {
+              alert(waktu);
                cordova.plugins.notification.local.isPresent(1, function (present) {
                    if(present)
                    {
                       var now = new Date();
                       if(waktu.getTime() > now.getTime())
                       {
+
                           alert(waktu);
                           updateNotificationSound(1, sholat, waktu);
                       }
