--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -667,7 +667,7 @@
 
           function switchVolumeOff(id)
           {
-              var string = 'volume-on-' + id;
+              var string = "volume-on-" + id;
               localStorage.setItem(string, 'off');
 
               $("#volume-on-" + id).hide();
@@ -676,7 +676,7 @@
 
           function switchVolumeOn(id)
           {
-              var string = 'volume-on-' + id;
+              var string = "volume-on-" + id;
               localStorage.setItem(string, 'on');
 
               $("#volume-off-" + id).hide();
@@ -685,7 +685,7 @@
 
           function switchNotificationOff(id)
           {
-              var string = 'notification-on-' + id;
+              var string = "notification-on-" + id;
               localStorage.setItem(string, 'off');
 
               $("#notification-on-" + id).hide();
@@ -694,7 +694,7 @@
 
           function switchNotificationOn(id)
           {
-              var string = 'notification-on-' + id;
+              var string = "notification-on-" + id;
               localStorage.setItem(string, 'on');
 
               $("#notification-off-" + id).hide();
@@ -779,6 +779,7 @@
                cordova.plugins.notification.local.isPresent(1, function (present) {
                    if(present)
                    {
+                       alert('present');
                       var now = new Date();
                       if(waktu.getTime() > now.getTime())
                       {
@@ -798,6 +799,7 @@
                   }
                   else
                   {
+                       alert('not present');
                       addNotificationSholat(1, sholat, waktu, true);
 
                       switchNotificationOn(1);
