--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -780,6 +780,7 @@
                    if(present)
                    {
                        alert('present');
+                       alert(waktu.getTime());
                       var now = new Date();
                       if(waktu.getTime() > now.getTime())
                       {
