alert waktu lagi

--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -780,7 +780,7 @@
                    if(present)
                    {
                        alert('present');
-                       alert(waktu.getTime());
+                       alert(waktu);
                       var now = new Date();
                       if(waktu.getTime() > now.getTime())
                       {
