--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -776,7 +776,7 @@
           function updateNotificationSoundSholat(notification_id, sholat, waktu)
           {
               alert(waktu);
-               cordova.plugins.notification.local.isPresent(1, function (present) {
+               cordova.plugins.notification.local.isPresent(1, function (present, waktu) {
                    if(present)
                    {
                        alert('present');
