--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -775,8 +775,8 @@
 
           function updateNotificationSoundSholat(notification_id, sholat, waktu)
           {
-              var waktu1 = subuh;
-              alert(waktu);
+              var waktu1 = waktu;
+              alert(waktu1);
                cordova.plugins.notification.local.isPresent(1, function (present) {
                    if(present)
                    {
