not present update

--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -806,6 +806,8 @@
                   else
                   {
                        alert('not present');
+                       var waktu = waktu1;
+                       alert(waktu);
                       addNotificationSholat(1, sholat, waktu, true);
 
                       switchNotificationOn(1);
