--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -1056,13 +1056,17 @@
              subuh = setDateTime(waktu, "4:36 am");
              //subuh = setDateTime(waktu, times.items[0].fajr);
              var waktu = new Date();
-             dhuhr = setDateTime(waktu, times.items[0].dhuhr);
+             //dhuhr = setDateTime(waktu, times.items[0].dhuhr);
+             dhuhr = setDateTime(waktu, "4:36 am");
              var waktu = new Date();
-             asr = setDateTimeAsr(waktu, times.items[0].asr);
+             //asr = setDateTimeAsr(waktu, times.items[0].asr);
+             asr = setDateTimeAsr(waktu, "4:36 am");
              var waktu = new Date();
-             maghrib = setDateTime(waktu, times.items[0].maghrib);
+             //maghrib = setDateTime(waktu, times.items[0].maghrib);
+             maghrib = setDateTime(waktu, "4:36 am");
              var waktu = new Date();
-             isha = setDateTime(waktu, times.items[0].isha);
+             //isha = setDateTime(waktu, times.items[0].isha);
+             isha = setDateTime(waktu, "4:36 am");
 
              $('.subuh')
              .text(formatAMPM(subuh));
